# supply-chain-agent-framework

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: demo.py
scaf/: __init__.py  benchmark.py  drift.py  experiments.py  guardrails.py  models.py  multiparty.py  router.py  scenario.py  scql.py
scaf/agents/: core.py
tests/: test_experiments.py  test_multiparty.py  test_scaf.py
